# microflow

./: .dockerignore  .env.example  .gitignore  .oxlintrc.json  .prettierrc  .yarnrc.yml  ARCHITECTURE.md  CONTEXT.md  CONTRIBUTE-YOUR-OWN-NODE.md  Cargo.toml  FEEDBACK.md  README.md  SECURITY.md  bts.jsonc  conversations.md  package.json  sensor-regression-findings.md  todo.md  tsconfig.json  turbo.json
apps/web/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/web/src-tauri/.cargo/: config.toml
apps/web/src-tauri/benches/: event_routing.rs
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/sidecar/: README.md  package-lock.json  package.json  tsconfig.json
apps/web/src-tauri/sidecar/src/: hardware-worker.ts  johnny-five.d.ts
apps/web/src-tauri/src/: error.rs  flow.rs  hardware.rs  lib.rs  serial_port_manager.rs
apps/web/src-tauri/src/codegen/: credentials.rs  emit.rs  mod.rs  placeholder.rs  validate.rs
apps/web/src-tauri/src/codegen/cloud/: figma.rs  llm.rs  mod.rs  monitor.rs  mqtt.rs
apps/web/src-tauri/src/codegen/control/: constant.rs  counter.rs  delay.rs  interval.rs  mod.rs  trigger.rs
apps/web/src-tauri/src/codegen/generator/: mod.rs  oscillator.rs
apps/web/src-tauri/src/codegen/input/: button.rs  hotkey.rs  i2c_device.rs  mod.rs  motion.rs  proximity.rs  sensor.rs  switch.rs
apps/web/src-tauri/src/codegen/output/: led.rs  matrix.rs  mod.rs  piezo.rs  pixel.rs  relay.rs  rgb.rs  servo.rs  stepper.rs
apps/web/src-tauri/src/codegen/transformation/: calculate.rs  compare.rs  function.rs  gate.rs  mod.rs  range_map.rs  smooth.rs
apps/web/src-tauri/src/flasher/: boards.rs  commands.rs  error.rs  firmware.rs  hex.rs  mod.rs  types.rs
apps/web/src-tauri/src/flasher/protocols/: avr109.rs  mod.rs  stk500v1.rs  stk500v2.rs
apps/web/src-tauri/src/hardware/: board.rs  events.rs  firmata.rs  mod.rs  port_monitor.rs  sidecar.rs  state.rs  types.rs
apps/web/src-tauri/src/llm/: commands.rs  manager.rs  mod.rs  provider.rs
apps/web/src-tauri/src/mqtt/: broker.rs  commands.rs  manager.rs  mod.rs
apps/web/src-tauri/src/runtime/: base.rs  board.rs  builders.rs  commands.rs  component.rs  context.rs  executor.rs  host.rs  midi.rs  mod.rs  pin_mode.rs  registry.rs  router.rs  serde_utils.rs  types.rs  wiring.rs  wiring_registry.rs
apps/web/src-tauri/src/runtime/board/: connection.rs  handle.rs  io_loop.rs  mod.rs  protocol.rs  receipt.rs  test_io_loop.rs
apps/web/src-tauri/src/runtime/cloud/: figma.rs  llm.rs  mod.rs  mqtt.rs
apps/web/src-tauri/src/runtime/control/: counter.rs  delay.rs  mod.rs  trigger.rs
apps/web/src-tauri/src/runtime/generator/: constant.rs  interval.rs  mod.rs  oscillator.rs
apps/web/src-tauri/src/runtime/input/: button.rs  debounce.rs  hotkey.rs  i2c_device.rs  mod.rs  motion.rs  proximity.rs  sensor.rs  switch.rs
apps/web/src-tauri/src/runtime/output/: led.rs  matrix.rs  mod.rs  monitor.rs  piezo.rs  pixel.rs  relay.rs  rgb.rs  servo.rs  stepper.rs
apps/web/src-tauri/src/runtime/services/: llm.rs  mod.rs  mqtt.rs
apps/web/src-tauri/src/runtime/transformation/: calculate.rs  compare.rs  function.rs  gate.rs  mod.rs  (+2 more)
apps/web/src-tauri/tests/: board_state.rs  catalog_parity.rs  codegen_parity.rs  component_lifecycle.rs  event_forwarding.rs  event_routing.rs  mock_component_tests.rs  mqtt_reconnect.rs  value_sync.rs
apps/web/src-tauri/tests/common/: mock_board.rs  mock_component.rs  mod.rs
crates/microflow-core/: Cargo.toml
crates/microflow-core/examples/: generate_sketch.rs
crates/microflow-core/src/: bringup.rs  flow.rs  lib.rs
crates/microflow-core/src/codegen/: board.rs  credentials.rs  emit.rs  mod.rs  parity.rs  placeholder.rs  validate.rs  wire.rs
crates/microflow-core/src/codegen/cloud/: figma.rs  llm.rs  midi.rs  mod.rs  monitor.rs  mqtt.rs  transport.rs
crates/microflow-core/src/codegen/control/: constant.rs  counter.rs  delay.rs  interval.rs  mod.rs  trigger.rs
crates/microflow-core/src/codegen/generator/: oscillator.rs
crates/microflow-core/src/codegen/input/: button.rs  hotkey.rs  i2c_device.rs  mod.rs  motion.rs  proximity.rs  sensor.rs  switch.rs
crates/microflow-core/src/codegen/output/: led.rs  matrix.rs  piezo.rs  pixel.rs  relay.rs  rgb.rs  servo.rs  stepper.rs
crates/microflow-core/src/codegen/transformation/: calculate.rs  compare.rs  function.rs  gate.rs  mod.rs  range_map.rs  smooth.rs
crates/microflow-core/src/config/: button.rs  calculate.rs  compare.rs  constant.rs  delay.rs  figma.rs  gate.rs  hotkey.rs  i2c_device.rs  interval.rs  led.rs  llm.rs  midi.rs  mod.rs  motion.rs  mqtt.rs  oscillator.rs  piezo.rs  pixel.rs  pn532.rs  range_map.rs  relay.rs  serde_utils.rs  servo.rs  smooth.rs  stepper.rs  switch.rs  trigger.rs
crates/microflow-core/src/firmata/: mod.rs  tests.rs
crates/microflow-core/src/flasher/: avr109.rs  driver.rs  firmware.rs  hex.rs  mod.rs  stk500v1.rs  stk500v2.rs  tests.rs
crates/microflow-core/src/flasher/firmware/: micro.hex  nano.hex
crates/microflow-core/src/runtime/: board.rs  component.rs  context.rs  error.rs  mod.rs  pin_mode.rs  reconcile.rs  registry.rs  router.rs  serde_utils.rs  subscriptions.rs  value.rs  wiring.rs
crates/microflow-core/src/runtime/cloud/: figma.rs  llm.rs  midi.rs  mod.rs  mqtt.rs
crates/microflow-core/src/runtime/control/: counter.rs  delay.rs  mod.rs  trigger.rs
crates/microflow-core/src/runtime/generator/: constant.rs  interval.rs  mod.rs  oscillator.rs
crates/microflow-core/src/runtime/input/: button.rs  hotkey.rs  i2c_device.rs  mod.rs  motion.rs  pn532.rs  proximity.rs  sensor.rs  switch.rs
crates/microflow-core/src/runtime/output/: led.rs  matrix.rs  mod.rs  monitor.rs  piezo.rs  pixel.rs  relay.rs  rgb.rs  servo.rs  stepper.rs
crates/microflow-core/src/runtime/transformation/: calculate.rs  compare.rs  function.rs  gate.rs  mod.rs  range_map.rs  smooth.rs
crates/microflow-firmata-wasm/: Cargo.toml
crates/microflow-firmata-wasm/src/: lib.rs
crates/microflow-runtime-wasm/: Cargo.toml
crates/microflow-runtime-wasm/src/: lib.rs
(+1092 files in other folders)
