[package]
name = "microflow-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Platform-independent core for microflow: Flow read-model and Arduino code generation"
license = "GPL-3.0"
repository = "https://github.com/xiduzo/microflow"

[lib]
name = "microflow_core"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = "10"
log = "0.4"
