[package]
name = "microflow-core"
version = "0.10.3"
edition = "2021"
rust-version = "1.77.2"
description = "Platform-independent core for microflow: Flow read-model and Arduino code generation"
license = "GPL-3.0"
repository = "https://github.com/xiduzo/microflow"

[lib]
name = "microflow_core"

[features]
default = []
# The live flow runtime (executor, router, component nodes) shared by the
# desktop bin and — via `microflow-runtime-wasm` — the browser. Off by default
# so codegen-only consumers (e.g. `microflow-codegen-wasm`) stay lean and the
# heavy runtime deps aren't pulled.
runtime = ["dep:rustc-hash", "dep:thiserror"]
# Cloud nodes (mqtt / llm / figma) inside the runtime. Network-backed, so
# excluded from the browser wasm build. Implies `runtime`.
cloud = ["runtime"]
# The `function` node's embedded JS engine (boa_engine). Heavy (a full JS VM);
# opt-in and excluded from the wasm build until its size is vetted. Implies
# `runtime`.
js = ["runtime", "dep:boa_engine"]

[dependencies]
# `rc` enables serializing the `Arc<str>` fields on `ComponentEvent` (the
# desktop gets this via feature unification; the standalone wasm build needs it
# stated here).
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
ts-rs = "10"
log = "0.4"
# Structured flow-runtime instrumentation (the `flow_tick` span + drain traces).
# Always-on like `log`; near-zero cost when no subscriber is installed. Hosts
# (desktop fmt, browser tracing-wasm) provide the subscriber.
tracing = "0.1"
# Runtime-only deps, pulled in by the `runtime` / `js` features above.
rustc-hash = { version = "1", optional = true }
thiserror = { version = "1", optional = true }
boa_engine = { version = "0.20", optional = true }

[dev-dependencies]
# Capture-assert that the runtime's `flow tick` wide event still fires, so the
# telemetry can't silently regress under a refactor.
tracing-test = "0.2"
