[package]
name = "microflow-firmata-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "WebAssembly wrapper exposing microflow-core's sans-IO Firmata codec to the browser (Web Serial transport lives in JS)"
license = "GPL-3.0"
repository = "https://github.com/xiduzo/microflow"

[lib]
# cdylib is required for `wasm-pack build`; rlib keeps the crate usable as a
# normal Rust dependency (e.g. for `cargo test`/clippy on the host).
crate-type = ["cdylib", "rlib"]

[dependencies]
microflow-core = { path = "../microflow-core" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Small, predictable panic behaviour in the browser: surface Rust panics as JS
# console errors instead of an opaque `unreachable` trap. Pulled in only for the
# wasm32 target so host builds stay lean.
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
