[package]
name = "microflow-runtime-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "WebAssembly wrapper exposing microflow-core's sans-IO flow runtime to the browser (Web Serial transport + timers live in JS)"
license = "GPL-3.0"
repository = "https://github.com/xiduzo/microflow"

[lib]
# cdylib is required for `wasm-pack build`; rlib keeps the crate usable as a
# normal Rust dependency (e.g. for `cargo test`/clippy on the host).
crate-type = ["cdylib", "rlib"]

[dependencies]
# `runtime` + `js` (the `Function` node's embedded JS engine, boa) + `cloud`.
# ADR-0009 made the mqtt/llm/figma nodes sans-IO — they emit `CloudRequest`s the
# browser host performs (LLM via `fetch`, MQTT/Figma via WSS) — so they carry no
# native deps and now belong in the wasm build, not just the desktop one.
microflow-core = { path = "../microflow-core", default-features = false, features = ["runtime", "js", "cloud"] }
wasm-bindgen = "0.2"
serde_json = "1.0"

# wasm32-only deps so host builds stay lean.
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Surface Rust panics as readable console errors.
console_error_panic_hook = "0.1"
# boa (the `js` feature's JS engine) pulls `getrandom` for `Math.random`; on
# wasm32-unknown-unknown it needs the `js` feature to source entropy from the
# browser's Web Crypto. Stated here so feature unification enables it on boa's copy.
getrandom = { version = "0.2", features = ["js"] }
# Browser observability for the shared core runtime, wasm32-only so host builds
# stay lean. `tracing-web` (maintained) renders core's `tracing` flow events (the
# `flow_tick` span + drain traces) to the devtools console and composes into a
# `Registry`, so a future UI-inspector fan-out Layer slots in beside it. The `log`
# bridge routes the crate's existing `log::` records into the same sink — the
# browser otherwise has no `log` subscriber at all, so they'd vanish.
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "registry", "std"] }
tracing-web = "0.1"
tracing-log = "0.2"
