[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
firmata-rs = "0.4.3"
serialport = "4"
tokio = { version = "1", features = ["sync", "rt", "macros", "time", "net"] }
mqtt-endpoint-tokio = { version = "0.6", default-features = false, features = ["tls", "ws"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
rustc-hash = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "event_routing"
harness = false
