[package]
name = "microflow"
version = "0.10.3"
description = "A application to control microcontrollers"
authors = ["xiduzo"]
license = "GPL-3.0"
repository = "https://github.com/xiduzo/microflow"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
serde_json = "1"

[dependencies]
microflow-core = { path = "../../../crates/microflow-core", features = ["runtime", "js", "cloud"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
serialport = "4"
tokio = { version = "1", features = ["sync", "rt", "macros", "time", "net"] }
mqtt-endpoint-tokio = { version = "0.6", default-features = false, features = ["tls", "ws"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
rustc-hash = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dashmap = "6"
async-trait = "0.1"
# TypeScript bindings for shared frontend payloads. `#[derive(TS)]` plus
# `#[ts(export, export_to = "../src/lib/bindings/")]` makes `cargo test` write
# the corresponding `.ts` file. Frontend imports the generated types so the
# Rust struct is the single source of truth for event payload shape.
ts-rs = "10"
# Flow-runtime tracing: render microflow-core's `flow_tick` events to stdout
# (visible under `tauri dev`). Separate pipeline from `tauri-plugin-log`.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
proptest = "1"
